--- a/deployment/ansible/roles/bootstrap/templates/cosmovisor.service.j2
+++ b/deployment/ansible/roles/bootstrap/templates/cosmovisor.service.j2
@@ -11,7 +11,7 @@ Restart=always
 RestartSec=1
 Environment="DAEMON_HOME={{ dcl_home }}" "DAEMON_NAME=dcld"
 Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=true"
-ExecStart={{ cosmovisor.path }} start
+ExecStart={{ cosmovisor.path }} run start
 
 StandardOutput=append:/var/log/cosmovisor/cosmovisor.log
 StandardError=append:/var/log/cosmovisor/cosmovisor.log
